--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			ХАРАКТЕРИСТИКИ
 		</p>
 		<ol>
-			<li><a href="#">Высота игрушки, см 45a1</a></li>
+			<li><a href="les5_task1/index.html">lesson 5 task1</a></li>
 			<li><a href="#">Тип Животныеa1</a></li>
 			<li><a href="#">Искусственный мехa1</a></li>
 			<ol>
