--- a/index.html
+++ b/index.html
@@ -1,51 +1,21 @@
-<!doctype html>
-<html  lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Vacancy</title> 
-		<link rel="stylesheet" type="text/css" href="style.css">
-		<!--link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"-->
-		<style type="text/css">
-			p{
-				color: red;
-			}
-		</style>
-	</head>
-	<body>
-		<h1>asdbkhjd</h1>
-		<p class="first">dejhw</p>
-		<p><span class="first"><a href="#">a1</a></span></p>
-		<p class="first">dejzxvhw</p>
-			
-		<img src="images.jpg">
-		<p>Коричневий ведмедик,який приємно тримати в руках і дарувати людям, яких ти любиш</p>
-		<p>
-			ХАРАКТЕРИСТИКИ
-		</p>
-		<ol>
-			<li><a href="les5_task1/index.html">lesson 5 task1</a></li>
-			<li><a href="#">Тип Животныеa1</a></li>
-			<li><a href="#">Искусственный мехa1</a></li>
-			<ol>
-				<li>Наполнитель Холлофайбер</li>
-				<li>Музыкальное сопровождение Нет</li>
-				<li>Материал верха</li>
-			</ol>
-			<li>Цвет Персиковый</li>
-		</ol>
-		<article>
-			<header></header>
-			<figure>
-		<figcaption>Cat</figcaption>
-		</figure>
-		<q>Цитата</q>
-		<p style="color: green;">
-			jhgkfehrkhe,<strong>,jfhgkerhjgj</strong> ,jfhgkerhjgj kjhlghrh.
-		</p>
-		<p>
-			Rmnb,j nghghg.
-		</p>
-		</article>
-		<span class="font"> Font</span>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<title>HomeWorks</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+	<ul>
+		<li>Lesson5
+			<ul>
+				<li><a href="Lesson5_HomeWork\my_les5_task1\index.html">task1</a></li>
+				<li><a href="Lesson5_HomeWork\my_les5_task1-border\index.html">task2</a></li>
+				<li><a href="Lesson5_HomeWork\my_les5_task2\index.html">task3</a></li>
+				<li><a href="Lesson5_HomeWork\task2\cossacs.html">task4</a></li>
+			</ul>
+		</li>
+		<li><a href="My Project\index.html">My project</a></li>
+	</ul>
+</body>
 </html>
